Fixed maintenance-posts handlebars to render correctly with small amount of input text and on small screens.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -558,9 +558,6 @@ video {
 .ml-5 {
   margin-left: 1.25rem;
 }
-.ml-6 {
-  margin-left: 1.5rem;
-}
 .mt-10 {
   margin-top: 2.5rem;
 }
